[gd_scene load_steps=2 format=3 uid="uid://bx7k3qp8n5mwj"]

[ext_resource type="Script" path="res://scripts/ui/settings_screen.gd" id="1_script"]

[node name="SettingsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SETTINGS"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Audio" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MasterVolumeContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MasterVolumeContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MasterVolumeContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume"

[node name="MasterValueLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MasterVolumeContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "100%"

[node name="MasterSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MasterVolumeContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolumeContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MusicVolumeContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MusicVolumeContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume"

[node name="MusicValueLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MusicVolumeContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "80%"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/MusicVolumeContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="SfxVolumeContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/SfxVolumeContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/SfxVolumeContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SFX Volume"

[node name="SfxValueLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/SfxVolumeContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "80%"

[node name="SfxSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/SfxVolumeContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="UiVolumeContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Audio/UiVolumeContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/UiVolumeContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "UI Volume"

[node name="UiValueLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/Audio/UiVolumeContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "100%"

[node name="UiSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/Audio/UiVolumeContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="Controls" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/Controls"]
layout_mode = 2
size_flags_vertical = 3

[node name="ControlsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Controls/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="ResetControlsButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Controls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Reset to Defaults"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Back"

[node name="ApplyButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Apply & Save"
